--- a/index.html
+++ b/index.html
@@ -283,6 +283,18 @@
           </div>
         </section>
 
+        <!-- OUR STORY SECTION -->
+        <section class="border-t border-slate-800 bg-gradient-to-br from-ermitsBlue via-slate-900 to-slate-950 py-16">
+          <div class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8 text-center">
+            <span class="inline-block rounded-full bg-ermitsGold/20 px-4 py-1 text-xs font-semibold text-ermitsGold mb-6">
+              Our Story
+            </span>
+            <p class="text-base sm:text-lg text-slate-200 leading-relaxed">
+              ERMITS emerged from the recognition that organizations needed more than just data—they needed intelligence.
+            </p>
+          </div>
+        </section>
+
 <!-- FRAMEWORKS + CONTACT -->
         <section id="frameworks" class="border-t border-slate-800 bg-slate-950 pb-16 pt-10">
           <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
