--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </div>
 
           <!-- Hero content -->
-          <div class="relative z-10 mx-auto flex max-w-7xl flex-col gap-12 px-4 pb-20 pt-20 sm:px-6 sm:pb-24 sm:pt-24 lg:flex-row lg:items-center lg:px-8">
+          <div class="relative z-10 mx-auto max-w-4xl px-4 pb-20 pt-20 sm:px-6 sm:pb-24 sm:pt-24 lg:px-8">
             <div class="max-w-xl space-y-6">
               <div class="inline-flex items-center gap-2 rounded-full bg-slate-900/80 px-3 py-1 text-[11px] font-semibold text-ermitsGold ring-1 ring-ermitsGold/40">
                 <span class="h-1.5 w-1.5 rounded-full bg-emerald-400 animate-pulse"></span>
@@ -160,48 +160,6 @@
                   <span class="h-1.5 w-1.5 rounded-full bg-ermitsGold"></span>
                   Built for SMBs and sectors
                 </div>
-              </div>
-            </div>
-
-            <!-- Right-side visual with logos -->
-            <div class="relative flex-1">
-              <div class="relative mx-auto max-w-md rounded-3xl border border-slate-800 bg-slate-900/80 p-5 shadow-xl shadow-blue-900/40 backdrop-blur">
-                <p class="text-xs font-semibold uppercase tracking-[0.2em] text-slate-400">
-                  ERMITS Ecosystem
-                </p>
-                <div class="mt-4 grid grid-cols-2 gap-4">
-                  <div class="flex items-center gap-3 rounded-2xl bg-slate-800/80 px-3 py-2 hover:bg-slate-800 transition-colors">
-                    <img src="./assets/logos/cybercorrect.png" alt="CyberCorrect" class="h-8 w-8 rounded-full" />
-                    <div>
-                      <p class="text-xs font-semibold text-slate-50">CyberCorrect</p>
-                      <p class="text-[11px] text-slate-400">Privacy & data rights</p>
-                    </div>
-                  </div>
-                  <div class="flex items-center gap-3 rounded-2xl bg-slate-800/80 px-3 py-2 hover:bg-slate-800 transition-colors">
-                    <img src="./assets/logos/cybercaution.png" alt="CyberCaution" class="h-8 w-8 rounded-full" />
-                    <div>
-                      <p class="text-xs font-semibold text-slate-50">CyberCaution</p>
-                      <p class="text-[11px] text-slate-400">Threat & ransomware</p>
-                    </div>
-                  </div>
-                  <div class="flex items-center gap-3 rounded-2xl bg-slate-800/80 px-3 py-2 hover:bg-slate-800 transition-colors">
-                    <img src="./assets/logos/vendorsoluce.png" alt="VendorSoluce" class="h-8 w-8 rounded-full" />
-                    <div>
-                      <p class="text-xs font-semibold text-slate-50">VendorSoluce</p>
-                      <p class="text-[11px] text-slate-400">Third-party risk</p>
-                    </div>
-                  </div>
-                  <div class="flex items-center gap-3 rounded-2xl bg-slate-800/80 px-3 py-2 hover:bg-slate-800 transition-colors">
-                    <img src="./assets/logos/ermits-advisory.png" alt="ERMITS Advisory" class="h-8 w-8 rounded-full" />
-                    <div>
-                      <p class="text-xs font-semibold text-slate-50">ERMITS Advisory</p>
-                      <p class="text-[11px] text-slate-400">Strategy & roadmaps</p>
-                    </div>
-                  </div>
-                </div>
-                <p class="mt-4 text-[11px] text-slate-400">
-                  Start where you are today, then plug in additional ERMITS components as your maturity grows.
-                </p>
               </div>
             </div>
           </div>
