Remove 'Schedule a conversation' button, keep only Contact Sales

--- a/index.html
+++ b/index.html
@@ -284,23 +284,17 @@
                 Share your current situation and constraints, and we'll help you prioritize the first practical steps across 
                 privacy, cyber risk and vendor assurance.
               </p>
-              <div class="flex flex-col sm:flex-row gap-3 justify-center">
+              <div class="flex justify-center">
                 <a
                   href="mailto:contact@ermits.com"
                   class="inline-flex items-center justify-center rounded-lg bg-gradient-to-r from-ermitsBlue to-ermitsIndigo px-6 py-3 text-sm font-semibold text-white shadow-lg shadow-blue-500/40 hover:shadow-xl transition-all"
                 >
-                  Schedule a conversation
+                  Contact Sales
                   <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 h-4 w-4" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14" />
                     <path d="m12 5 7 7-7 7" />
                   </svg>
-                </a>
-                <a
-                  href="mailto:contact@ermits.com"
-                  class="inline-flex items-center justify-center rounded-lg border border-slate-600 px-6 py-3 text-sm font-semibold text-slate-200 hover:bg-slate-800/60 transition-all"
-                >
-                  Contact Sales
                 </a>
               </div>
             </div>
