Restore product cards: ERMITS Ecosystem (3 products) and separate ERMITS Advisory section

--- a/index.html
+++ b/index.html
@@ -163,6 +163,132 @@
           </div>
         </section>
 
+        <!-- ERMITS ECOSYSTEM -->
+        <section class="border-t border-slate-800 bg-slate-950 py-16">
+          <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+            <div class="mx-auto max-w-3xl text-center mb-12">
+              <h2 class="text-2xl font-bold text-slate-50 sm:text-3xl mb-4">
+                ERMITS <span class="text-ermitsGold">Ecosystem</span>
+              </h2>
+              <p class="text-sm text-slate-300 sm:text-base mb-4">
+                Start where you are today, then plug in additional ERMITS components as your maturity grows.
+              </p>
+            </div>
+
+            <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3 max-w-6xl mx-auto">
+              <!-- CyberCorrect -->
+              <article class="flex flex-col rounded-2xl border-2 border-slate-800 bg-slate-900/80 p-6 shadow-sm hover:border-blue-500/50 transition-all hover:shadow-lg">
+                <div class="flex items-center gap-3 mb-4">
+                  <img src="./assets/logos/cybercorrect.png" alt="CyberCorrect" class="h-12 w-12 rounded-full" />
+                  <div>
+                    <h3 class="text-base font-semibold text-slate-50">CyberCorrect</h3>
+                    <p class="text-[11px] uppercase tracking-[0.16em] text-blue-400">Privacy & data rights</p>
+                  </div>
+                </div>
+                <p class="text-sm text-slate-300 leading-relaxed">
+                  Self-service Privacy Rights Portal to operationalize GDPR, CCPA, LGPD, and DPDP obligations 
+                  without hiring a full privacy team.
+                </p>
+                <a href="https://cybercorrect.com" target="_blank"
+                   class="mt-4 inline-flex items-center text-xs font-semibold text-blue-400 hover:text-blue-300 transition-colors">
+                  Launch CyberCorrect
+                  <svg xmlns="http://www.w3.org/2000/svg" class="ml-1 h-4 w-4" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M5 12h14" />
+                    <path d="m12 5 7 7-7 7" />
+                  </svg>
+                </a>
+              </article>
+
+              <!-- CyberCaution -->
+              <article class="flex flex-col rounded-2xl border-2 border-slate-800 bg-slate-900/80 p-6 shadow-sm hover:border-indigo-500/50 transition-all hover:shadow-lg">
+                <div class="flex items-center gap-3 mb-4">
+                  <img src="./assets/logos/cybercaution.png" alt="CyberCaution" class="h-12 w-12 rounded-full" />
+                  <div>
+                    <h3 class="text-base font-semibold text-slate-50">CyberCaution</h3>
+                    <p class="text-[11px] uppercase tracking-[0.16em] text-indigo-400">Threat & ransomware</p>
+                  </div>
+                </div>
+                <p class="text-sm text-slate-300 leading-relaxed">
+                  Combining threat intelligence, exposure analysis, and playbook-driven actions for small 
+                  and mid-size organizations. Proactive protection against emerging threats.
+                </p>
+                <a href="https://cybercaution.com" target="_blank"
+                   class="mt-4 inline-flex items-center text-xs font-semibold text-indigo-400 hover:text-indigo-300 transition-colors">
+                  Launch CyberCaution
+                  <svg xmlns="http://www.w3.org/2000/svg" class="ml-1 h-4 w-4" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M5 12h14" />
+                    <path d="m12 5 7 7-7 7" />
+                  </svg>
+                </a>
+              </article>
+
+              <!-- VendorSoluce -->
+              <article class="flex flex-col rounded-2xl border-2 border-slate-800 bg-slate-900/80 p-6 shadow-sm hover:border-ermitsGreen/50 transition-all hover:shadow-lg">
+                <div class="flex items-center gap-3 mb-4">
+                  <img src="./assets/logos/vendorsoluce.png" alt="VendorSoluce" class="h-12 w-12 rounded-full" />
+                  <div>
+                    <h3 class="text-base font-semibold text-slate-50">VendorSoluce</h3>
+                    <p class="text-[11px] uppercase tracking-[0.16em] text-ermitsGreen">Third-party risk</p>
+                  </div>
+                </div>
+                <p class="text-sm text-slate-300 leading-relaxed">
+                  Vendor risk management with inherent risk scoring, exposure mapping, and recommended 
+                  controls—starting from your existing vendor list.
+                </p>
+                <a href="https://vendorsoluce.com" target="_blank"
+                   class="mt-4 inline-flex items-center text-xs font-semibold text-ermitsGreen hover:text-green-400 transition-colors">
+                  Launch VendorSoluce
+                  <svg xmlns="http://www.w3.org/2000/svg" class="ml-1 h-4 w-4" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M5 12h14" />
+                    <path d="m12 5 7 7-7 7" />
+                  </svg>
+                </a>
+              </article>
+            </div>
+          </div>
+        </section>
+
+        <!-- ERMITS ADVISORY -->
+        <section class="border-t border-slate-800 bg-gradient-to-br from-ermitsBlue via-slate-900 to-slate-950 py-16">
+          <div class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-8">
+              <h2 class="text-2xl font-bold text-slate-50 sm:text-3xl mb-4">
+                ERMITS <span class="text-ermitsGold">Advisory</span>
+              </h2>
+              <p class="text-sm text-slate-300 sm:text-base">
+                Executive-ready guidance that connects your current risk posture with practical roadmaps and investment plans.
+              </p>
+            </div>
+            <div class="max-w-2xl mx-auto">
+              <article class="flex flex-col rounded-2xl border-2 border-slate-700/50 bg-slate-900/60 p-6 shadow-lg">
+                <div class="flex items-center gap-3 mb-4">
+                  <img src="./assets/logos/ermits-advisory.png" alt="ERMITS Advisory" class="h-12 w-12 rounded-full" />
+                  <div>
+                    <h3 class="text-base font-semibold text-slate-50">ERMITS Advisory</h3>
+                    <p class="text-[11px] uppercase tracking-[0.16em] text-ermitsGold">Strategy & Roadmaps</p>
+                  </div>
+                </div>
+                <p class="text-sm text-slate-200 leading-relaxed mb-4">
+                  Strategic advisory services to help you prioritize and implement the right solutions for your organization. 
+                  Connect your current risk posture with practical roadmaps and investment plans.
+                </p>
+                <a href="#contact"
+                   class="mt-auto inline-flex items-center justify-center text-xs font-semibold text-ermitsGold hover:text-yellow-400 transition-colors">
+                  Talk to Advisory
+                  <svg xmlns="http://www.w3.org/2000/svg" class="ml-1 h-4 w-4" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M5 12h14" />
+                    <path d="m12 5 7 7-7 7" />
+                  </svg>
+                </a>
+              </article>
+            </div>
+          </div>
+        </section>
+
 <!-- FRAMEWORKS + CONTACT -->
         <section id="frameworks" class="border-t border-slate-800 bg-slate-950 pb-16 pt-10">
           <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
