--- a/index.html
+++ b/index.html
@@ -151,15 +151,29 @@
           </div>
         </section>
 
-<!-- OUR STORY SECTION -->
+        <!-- OUR STORY SECTION -->
         <section class="border-t border-slate-800 bg-gradient-to-br from-ermitsBlue via-slate-900 to-slate-950 py-16">
-          <div class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8 text-center">
+          <div class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8">
             <span class="inline-block rounded-full bg-ermitsGold/20 px-4 py-1 text-xs font-semibold text-ermitsGold mb-6">
               Our Story
             </span>
-            <p class="text-base sm:text-lg text-slate-200 leading-relaxed">
-              ERMITS emerged from the recognition that organizations needed more than just data—they needed intelligence.
-            </p>
+            <div class="space-y-6 text-base sm:text-lg text-slate-200 leading-relaxed">
+              <p>
+                In September 2016, in anticipation of emerging global trends in data privacy law and cybersecurity, ERMITS was created to begin research and development for a comprehensive GRC solution. We have invested heavily not only in acquiring the technological and legal knowledge required to create this product, but also in learning to monitor the broader business and political dynamics that affect its supply and demand.
+              </p>
+              <p>
+                ERMITS solves problems at the intersection of enterprise risk management and information technology, with a primary focus on helping businesses comply with information privacy and cybersecurity laws based on best practices. ERMITS offers a comprehensive catalog of easy-to-use, AI-powered digital tools as well as expert services to optimize the protection of information systems while improving online operations and managing other risks.
+              </p>
+              <p>
+                <strong class="text-ermitsGold">Privacy First Philosophy:</strong> At ERMITS, privacy is not an afterthought—it's the foundation of everything we build. We believe that protecting personal data and respecting individual privacy rights is both a fundamental responsibility and a strategic advantage. Our privacy-first approach means that every tool, every process, and every recommendation we provide is designed with data protection and user privacy as the primary consideration, ensuring that organizations can build trust with their customers while achieving compliance with evolving global privacy regulations.
+              </p>
+              <p>
+                ERMITS' initial targets are small and medium-sized businesses in sectors or activities heavily affected by data privacy regulations, such as education, supply chain management, financial services, healthcare, retail, law, and technology. Our offerings focus on automated assessment tools, including user-friendly wizards, templates, audit tools, and checklists, aimed at implementing GDPR, CCPA, HIPAA and other privacy laws in the US and Europe, in light of global standards such as NIST SP-800 and SP-1800, as well as frameworks like PESTEL.
+              </p>
+              <p>
+                ERMITS is led by a team of professionals with up-to-date training in technology law, and over a decade of combined work experience in cybersecurity, privacy or other regulatory compliance, united by a global vision inspired by personal experience.
+              </p>
+            </div>
           </div>
         </section>
 
