--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
       }
     </style>
   </head>
-  <body class="h-full bg-slate-950 text-slate-50 antialiased">
+  <body class="h-full bg-slate-900 text-slate-50 antialiased">
     <div class="min-h-screen flex flex-col">
       <!-- NAVBAR -->
-      <header class="relative z-20 border-b border-slate-800 bg-slate-950/80 backdrop-blur sticky top-0">
+      <header class="relative z-20 border-b border-slate-800 bg-slate-900/80 backdrop-blur sticky top-0">
         <div class="mx-auto flex h-16 max-w-7xl items-center justify-between px-4 sm:px-6 lg:px-8">
           <a href="#home" class="flex items-center gap-3">
             <img
@@ -84,7 +84,7 @@
           <!-- Animated background container -->
           <div id="animated-bg" class="pointer-events-none absolute inset-0">
             <!-- Base gradient -->
-            <div class="absolute inset-0 bg-gradient-to-br from-blue-900 via-slate-950 to-black"></div>
+            <div class="absolute inset-0 bg-gradient-to-br from-blue-900 via-slate-900 to-slate-950"></div>
 
             <!-- Animated grid -->
             <div class="absolute inset-0 opacity-25">
@@ -152,7 +152,7 @@
         </section>
 
         <!-- OUR STORY SECTION -->
-        <section class="border-t border-slate-800 bg-gradient-to-br from-ermitsBlue via-slate-900 to-slate-950 py-16">
+        <section class="border-t border-slate-800 bg-gradient-to-br from-ermitsBlue via-slate-800 to-slate-900 py-16">
           <div class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8">
             <span class="inline-block rounded-full bg-ermitsGold/20 px-4 py-1 text-xs font-semibold text-ermitsGold mb-6">
               Our Story
@@ -178,7 +178,7 @@
         </section>
 
         <!-- ERMITS ECOSYSTEM -->
-        <section class="border-t border-slate-800 bg-slate-950 py-16">
+        <section class="border-t border-slate-800 bg-slate-900 py-16">
           <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
             <div class="mx-auto max-w-3xl text-center mb-12">
               <h2 class="text-2xl font-bold text-slate-50 sm:text-3xl mb-4">
@@ -191,7 +191,7 @@
 
             <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3 max-w-6xl mx-auto">
               <!-- CyberCorrect -->
-              <article class="flex flex-col rounded-2xl border-2 border-slate-800 bg-slate-900/80 p-6 shadow-sm hover:border-blue-500/50 transition-all hover:shadow-lg">
+              <article class="flex flex-col rounded-2xl border-2 border-slate-700 bg-slate-800/80 p-6 shadow-sm hover:border-blue-500/50 transition-all hover:shadow-lg">
                 <div class="flex items-center gap-3 mb-4">
                   <img src="./assets/logos/cybercorrect.png" alt="CyberCorrect" class="h-12 w-12 rounded-full" />
                   <div>
@@ -266,7 +266,7 @@
         </section>
 
         <!-- ERMITS ADVISORY -->
-        <section class="border-t border-slate-800 bg-gradient-to-br from-ermitsBlue via-slate-900 to-slate-950 py-16">
+        <section class="border-t border-slate-800 bg-gradient-to-br from-ermitsBlue via-slate-800 to-slate-900 py-16">
           <div class="mx-auto max-w-4xl px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-8">
               <h2 class="text-2xl font-bold text-slate-50 sm:text-3xl mb-4">
@@ -277,7 +277,7 @@
               </p>
             </div>
             <div class="max-w-2xl mx-auto">
-              <article class="flex flex-col rounded-2xl border-2 border-slate-700/50 bg-slate-900/60 p-6 shadow-lg">
+              <article class="flex flex-col rounded-2xl border-2 border-slate-600/50 bg-slate-800/60 p-6 shadow-lg">
                 <div class="flex items-center gap-3 mb-4">
                   <img src="./assets/logos/ermits-advisory.png" alt="ERMITS Advisory" class="h-12 w-12 rounded-full" />
                   <div>
@@ -304,9 +304,9 @@
         </section>
 
 <!-- FRAMEWORKS + CONTACT -->
-        <section id="frameworks" class="border-t border-slate-800 bg-slate-950 pb-16 pt-10">
+        <section id="frameworks" class="border-t border-slate-800 bg-slate-900 pb-16 pt-10">
           <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-            <div class="rounded-2xl border border-slate-800 bg-slate-900/80 p-6 text-center shadow-sm mb-12">
+            <div class="rounded-2xl border border-slate-700 bg-slate-800/80 p-6 text-center shadow-sm mb-12">
               <p class="text-xs font-semibold uppercase tracking-[0.2em] text-slate-400 mb-3">
                 Framework Alignment
               </p>
@@ -352,7 +352,7 @@
         </section>
       </main>
 
-      <footer class="border-t border-slate-800 bg-slate-950 py-8">
+      <footer class="border-t border-slate-800 bg-slate-900 py-8">
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
           <div class="text-center mb-6">
             <h4 class="text-sm font-semibold text-slate-50 mb-2">ERMITS</h4>
