Condense Our Story section content for better readability

--- a/index.html
+++ b/index.html
@@ -280,19 +280,13 @@
             </span>
             <div class="space-y-6 text-base sm:text-lg text-slate-200 leading-relaxed">
               <p>
-                In September 2016, in anticipation of emerging global trends in data privacy law and cybersecurity, ERMITS was created to begin research and development for a comprehensive GRC solution. We have invested heavily not only in acquiring the technological and legal knowledge required to create this product, but also in learning to monitor the broader business and political dynamics that affect its supply and demand.
+                In September 2016, ERMITS was created to address emerging global trends in data privacy law and cybersecurity. We solve problems at the intersection of enterprise risk management and information technology, helping businesses comply with privacy and cybersecurity laws through AI-powered digital tools and expert services.
               </p>
               <p>
-                ERMITS solves problems at the intersection of enterprise risk management and information technology, with a primary focus on helping businesses comply with information privacy and cybersecurity laws based on best practices. ERMITS offers a comprehensive catalog of easy-to-use, AI-powered digital tools as well as expert services to optimize the protection of information systems while improving online operations and managing other risks.
+                <strong class="text-ermitsGold">Privacy First Philosophy:</strong> At ERMITS, privacy is not an afterthought—it's the foundation of everything we build. We believe that protecting personal data and respecting individual privacy rights is both a fundamental responsibility and a strategic advantage, ensuring organizations can build trust with their customers while achieving compliance with evolving global privacy regulations.
               </p>
               <p>
-                <strong class="text-ermitsGold">Privacy First Philosophy:</strong> At ERMITS, privacy is not an afterthought—it's the foundation of everything we build. We believe that protecting personal data and respecting individual privacy rights is both a fundamental responsibility and a strategic advantage. Our privacy-first approach means that every tool, every process, and every recommendation we provide is designed with data protection and user privacy as the primary consideration, ensuring that organizations can build trust with their customers while achieving compliance with evolving global privacy regulations.
-              </p>
-              <p>
-                ERMITS' initial targets are small and medium-sized businesses in sectors or activities heavily affected by data privacy regulations, such as education, supply chain management, financial services, healthcare, retail, law, and technology. Our offerings focus on automated assessment tools, including user-friendly wizards, templates, audit tools, and checklists, aimed at implementing GDPR, CCPA, HIPAA and other privacy laws in the US and Europe, in light of global standards such as NIST SP-800 and SP-1800, as well as frameworks like PESTEL.
-              </p>
-              <p>
-                ERMITS is led by a team of professionals with up-to-date training in technology law, and over a decade of combined work experience in cybersecurity, privacy or other regulatory compliance, united by a global vision inspired by personal experience.
+                ERMITS serves small and medium-sized businesses in sectors heavily affected by data privacy regulations, offering automated assessment tools and expert guidance to implement GDPR, CCPA, HIPAA and other privacy laws in alignment with global standards such as NIST and frameworks like PESTEL.
               </p>
             </div>
           </div>
