Update Our Story opening text

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             </span>
             <div class="space-y-6 text-base sm:text-lg text-slate-200 leading-relaxed">
               <p>
-                In September 2016, ERMITS was created to address emerging global trends in data privacy law and cybersecurity. We solve problems at the intersection of enterprise risk management and information technology, helping businesses comply with privacy and cybersecurity laws through AI-powered digital tools and expert services.
+                ERMITS was conceived in 2016 to research and address emerging global threats in data privacy law and cybersecurity. We solve problems at the intersection of enterprise risk management and information technology, helping businesses comply with privacy and cybersecurity laws through AI-powered digital tools and expert services.
               </p>
               <p>
                 <strong class="text-ermitsGold">Privacy First Philosophy:</strong> At ERMITS, privacy is not an afterthought—it's the foundation of everything we build. We believe that protecting personal data and respecting individual privacy rights is both a fundamental responsibility and a strategic advantage, ensuring organizations can build trust with their customers while achieving compliance with evolving global privacy regulations.
