Update theme colors to lighter, more vibrant shades

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         theme: {
           extend: {
             colors: {
-              ermitsBlue: "#1B365D",
-              ermitsIndigo: "#4F46E5",
-              ermitsGold: "#F4B400",
-              ermitsOrange: "#FF8C00",
-              ermitsGreen: "#00A878",
+              ermitsBlue: "#3B6FA8",
+              ermitsIndigo: "#6366F1",
+              ermitsGold: "#FCD34D",
+              ermitsOrange: "#FB923C",
+              ermitsGreen: "#10B981",
             },
           },
         },
