Update tagline to full ERMITS definition and increase logo size

--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
             <img
               src="./assets/logos/ermits-logo.png"
               alt="ERMITS logo"
-              class="h-8 w-8 rounded-full shadow"
+              class="h-12 w-12 rounded-full shadow"
             />
             <div class="leading-tight">
               <div class="text-sm font-semibold tracking-wide text-slate-50">
                 ERMITS
               </div>
               <div class="text-[11px] uppercase tracking-[0.16em] text-slate-400">
-                Enterprise Risk & IT Security
+                Enterprise Risk Management & Information Technology Solutions
               </div>
             </div>
           </a>
