Fix theme toggle: wrap in DOMContentLoaded and add null checks

--- a/index.html
+++ b/index.html
@@ -459,32 +459,41 @@
     </div>
 
     <script>
-      // Theme Toggle
-      const body = document.getElementById('body');
-      const themeToggle = document.getElementById('theme-toggle');
-      const themeIcon = document.getElementById('theme-icon');
+      // Theme Toggle - Wait for DOM to be ready
+      document.addEventListener('DOMContentLoaded', function() {
+        const body = document.getElementById('body');
+        const themeToggle = document.getElementById('theme-toggle');
+        const themeIcon = document.getElementById('theme-icon');
 
-      // Get saved theme or default to dark
-      const currentTheme = localStorage.getItem('theme') || 'dark';
-      if (currentTheme === 'light') {
-        body.classList.add('light');
-        updateThemeIcon('light');
-      }
-
-      themeToggle.addEventListener('click', () => {
-        body.classList.toggle('light');
-        const isLight = body.classList.contains('light');
-        localStorage.setItem('theme', isLight ? 'light' : 'dark');
-        updateThemeIcon(isLight ? 'light' : 'dark');
-      });
-
-      function updateThemeIcon(theme) {
-        if (theme === 'light') {
-          themeIcon.innerHTML = '<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />';
-        } else {
-          themeIcon.innerHTML = '<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />';
+        if (!body || !themeToggle || !themeIcon) {
+          console.error('Theme toggle elements not found');
+          return;
         }
-      }
+
+        function updateThemeIcon(theme) {
+          if (!themeIcon) return;
+          if (theme === 'light') {
+            themeIcon.innerHTML = '<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />';
+          } else {
+            themeIcon.innerHTML = '<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />';
+          }
+        }
+
+        // Get saved theme or default to dark
+        const currentTheme = localStorage.getItem('theme') || 'dark';
+        if (currentTheme === 'light') {
+          body.classList.add('light');
+          updateThemeIcon('light');
+        }
+
+        // Add click event listener
+        themeToggle.addEventListener('click', () => {
+          body.classList.toggle('light');
+          const isLight = body.classList.contains('light');
+          localStorage.setItem('theme', isLight ? 'light' : 'dark');
+          updateThemeIcon(isLight ? 'light' : 'dark');
+        });
+      });
 
       // Year
       document.getElementById("year").textContent = new Date().getFullYear().toString();
