--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
             </p>
           </div>
           <div class="border-t border-slate-800 pt-6 flex flex-col sm:flex-row items-center justify-center gap-4 text-[11px] text-slate-500">
-            <span>© <span id="year"></span> ERMITS Corporation. All rights reserved.</span>
+            <span>© <span id="year"></span> ERMITS LLC. All rights reserved.</span>
             <span class="flex gap-4">
               <a href="#contact" class="hover:text-ermitsGold transition-colors">Contact</a>
             </span>
