--- a/index.html
+++ b/index.html
@@ -440,7 +440,14 @@
       <footer class="border-t border-slate-800 bg-slate-900 py-8">
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
           <div class="text-center mb-6">
-            <h4 class="text-sm font-semibold text-slate-50 mb-2">ERMITS</h4>
+            <div class="flex items-center justify-center gap-3 mb-2">
+              <img
+                src="./assets/logos/ermits-logo.png"
+                alt="ERMITS logo"
+                class="h-10 w-10 rounded-full shadow"
+              />
+              <h4 class="text-sm font-semibold text-slate-50">ERMITS</h4>
+            </div>
             <p class="text-xs text-slate-400 leading-relaxed max-w-2xl mx-auto mb-2">
               Enterprise Risk Management & Information Technology Solutions
             </p>
