Header: remove tagline and increase ERMITS text size

--- a/index.html
+++ b/index.html
@@ -152,11 +152,8 @@
               class="h-12 w-12 rounded-full shadow"
             />
             <div class="leading-tight">
-              <div class="text-sm font-semibold tracking-wide text-slate-50">
+              <div class="text-xl font-semibold tracking-wide text-slate-50">
                 ERMITS
-              </div>
-              <div class="text-[11px] uppercase tracking-[0.16em] text-slate-400">
-                Enterprise Risk Management & Information Technology Solutions
               </div>
             </div>
           </a>
